ready for test tomorrow

--- a/notebooks/cost_response_dataset_join.ipynb
+++ b/notebooks/cost_response_dataset_join.ipynb
@@ -3469,7 +3469,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>DMA</th>\n",
+       "      <th>ZIP</th>\n",
+       "      <th>sessions</th>\n",
+       "      <th>fb_dma_cost</th>\n",
+       "      <th>tiktok_state_cost</th>\n",
+       "      <th>google_cost</th>\n",
+       "      <th>city_dma_session_ratio</th>\n",
+       "      <th>city_state_session_ratio</th>\n",
+       "      <th>facebook_cost_city_normalized</th>\n",
+       "      <th>tiktok_cost_city_normalized</th>\n",
+       "      <th>total_cost</th>\n",
+       "      <th>geo_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-04-01</td>\n",
+       "      <td>ANAHEIM</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>LOS ANGELES</td>\n",
+       "      <td>ANAHEIM</td>\n",
+       "      <td>1</td>\n",
+       "      <td>319.558080</td>\n",
+       "      <td>85.32</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>0.021277</td>\n",
+       "      <td>0.006329</td>\n",
+       "      <td>6.799108</td>\n",
+       "      <td>0.540000</td>\n",
+       "      <td>414.817188</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-04-01</td>\n",
+       "      <td>ATLANTA</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>ATLANTA</td>\n",
+       "      <td>ATLANTA</td>\n",
+       "      <td>24</td>\n",
+       "      <td>129.417073</td>\n",
+       "      <td>20.33</td>\n",
+       "      <td>26.02</td>\n",
+       "      <td>0.923077</td>\n",
+       "      <td>0.727273</td>\n",
+       "      <td>119.461913</td>\n",
+       "      <td>14.785455</td>\n",
+       "      <td>310.014441</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-04-01</td>\n",
+       "      <td>ATWATER</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>FRESNO - VISALIA</td>\n",
+       "      <td>ATWATER</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>85.32</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.006329</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.540000</td>\n",
+       "      <td>85.860000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-04-01</td>\n",
+       "      <td>AURORA</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>DENVER</td>\n",
+       "      <td>AURORA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>76.282380</td>\n",
+       "      <td>12.08</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.038462</td>\n",
+       "      <td>0.037037</td>\n",
+       "      <td>2.933938</td>\n",
+       "      <td>0.447407</td>\n",
+       "      <td>91.743725</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-04-01</td>\n",
+       "      <td>AVALON</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>LOS ANGELES</td>\n",
+       "      <td>AVALON</td>\n",
+       "      <td>1</td>\n",
+       "      <td>319.558080</td>\n",
+       "      <td>85.32</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.021277</td>\n",
+       "      <td>0.006329</td>\n",
+       "      <td>6.799108</td>\n",
+       "      <td>0.540000</td>\n",
+       "      <td>412.217188</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date     City State               DMA      ZIP  sessions  fb_dma_cost  tiktok_state_cost  google_cost  city_dma_session_ratio  city_state_session_ratio  facebook_cost_city_normalized  tiktok_cost_city_normalized  total_cost  geo_id\n",
+       "0 2024-04-01  ANAHEIM    CA       LOS ANGELES  ANAHEIM         1   319.558080              85.32         2.60                0.021277                  0.006329                       6.799108                     0.540000  414.817188       1\n",
+       "1 2024-04-01  ATLANTA    GA           ATLANTA  ATLANTA        24   129.417073              20.33        26.02                0.923077                  0.727273                     119.461913                    14.785455  310.014441       2\n",
+       "2 2024-04-01  ATWATER    CA  FRESNO - VISALIA  ATWATER         1     0.000000              85.32         0.00                0.200000                  0.006329                       0.000000                     0.540000   85.860000       3\n",
+       "3 2024-04-01   AURORA    CO            DENVER   AURORA         1    76.282380              12.08         0.00                0.038462                  0.037037                       2.933938                     0.447407   91.743725       4\n",
+       "4 2024-04-01   AVALON    CA       LOS ANGELES   AVALON         1   319.558080              85.32         0.00                0.021277                  0.006329                       6.799108                     0.540000  412.217188       5"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a mapping of unique city-state combinations to sequential IDs\n",
+    "city_state_pairs = final_df[['City', 'State']].drop_duplicates().reset_index(drop=True)\n",
+    "city_state_pairs['geo_id'] = city_state_pairs.index + 1  # Start IDs from 1\n",
+    "\n",
+    "# Merge this back to the main dataframe\n",
+    "final_df = pd.merge(\n",
+    "    final_df,\n",
+    "    city_state_pairs,\n",
+    "    on=['City', 'State'],\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final_df.loc[final_df['geo_id'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
