--- a/notebooks/cost_response_dataset_join.ipynb
+++ b/notebooks/cost_response_dataset_join.ipynb
@@ -4162,7 +4162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -4170,7 +4170,8 @@
      "output_type": "stream",
      "text": [
       "Final dataset saved to ../data/processed/cost_response_data_wide.csv\n",
-      "Final dataset saved to ../data/processed/cost_response_data_design_input.csv\n"
+      "Final dataset saved to ../data/processed/cost_response_data_design_input.csv\n",
+      "Final dataset saved to ../data/processed/cost_response_geo_mapping.csv\n"
      ]
     }
    ],
@@ -4180,14 +4181,14 @@
     "final_df.to_csv(output_file, index=False)\n",
     "print(f\"Final dataset saved to {output_file}\")\n",
     "\n",
-    "# in\n",
+    "# input for design\n",
     "output_file = os.path.join(OUTPUT_PATH, 'cost_response_data_design_input.csv')\n",
     "client_dataset.to_csv(output_file, index=False)\n",
     "print(f\"Final dataset saved to {output_file}\")\n",
     "\n",
-    "\n",
-    "output_file = os.path.join(OUTPUT_PATH, 'cost_response_data_design_input.csv')\n",
-    "client_dataset.to_csv(output_file, index=False)\n",
+    "# geo mapping\n",
+    "output_file = os.path.join(OUTPUT_PATH, 'cost_response_geo_mapping.csv')\n",
+    "city_state_pairs.to_csv(output_file, index=False)\n",
     "print(f\"Final dataset saved to {output_file}\")"
    ]
   },
