--- a/notebooks/cost_response_dataset_join.ipynb
+++ b/notebooks/cost_response_dataset_join.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4  20250319     Alaska      US-AK       Sitka    1012913         1                 0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "4  Wichita-Hutchinson Plus  2025-03-20          358           10.569953       2025-03-20     2025-03-20"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "4  3/20/25   Unknown  386.32        13627      USD"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "4  2024-01-01                 Amarillo TX                Dumas                  Texas                     United States           USD   1.73      4"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "4  2024-04-01   AVALON     1013564  CALIFORNIA         1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "4  2024-01-01           ALEXANDRIA, LA           ALEXANDRIA, LA        LA   0.809913"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
        "4  2024-03-25  CALIFORNIA  CALIFORNIA           CA        38.12"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
        "4  2024-01-01  ALEXANDER CITY                 ALABAMA                MONTGOMERY-SELMA AL        AL       7.66"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
        "4     11023       501  NEW YORK       GREAT NECK    NY   New York        11023       GREAT NECK, NY    NEW YORK            NY"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
        "4     NEW YORK    NY          NEW YORK       501"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
        "4           ALEXANDRIA, LA       644              ['LA']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
        "4  2024-04-01   AVALON     1013564  CALIFORNIA         1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
        "4  2024-04-01   AVALON     1013564  CALIFORNIA         1           CA   AVALON    CA     LOS ANGELES     803.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1740,7 @@
        "45  2024-04-01  HAMPTONS AT BOCA RATON     9052094     FLORIDA        13           FL  NaN   NaN      NaN       NaN"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1862,7 @@
        "4  2024-01-01  ALEXANDER CITY                 ALABAMA                MONTGOMERY-SELMA AL        AL       7.66"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,7 @@
        "4  2024-01-01  ALEXANDER CITY                 ALABAMA                MONTGOMERY-SELMA AL        AL       7.66  ALEXANDER CITY    AL            MONTGOMERY-SELMA     698.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -2116,7 +2116,7 @@
        "4  2024-01-01           ALEXANDRIA, LA           ALEXANDRIA, LA        LA   0.809913"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -2241,7 +2241,7 @@
        "4  2024-01-01           ALEXANDRIA, LA           ALEXANDRIA, LA        LA   0.809913"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2254,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -2339,7 +2339,7 @@
        "4  2024-03-25  CALIFORNIA  CALIFORNIA           CA        38.12"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2359,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2369,7 +2369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -2393,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -2478,7 +2478,7 @@
        "4  2024-03-25  CALIFORNIA  CALIFORNIA           CA        38.12"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -2499,6 +2499,7 @@
       "Starting with GA4 data: (100000, 10)\n",
       "After left join with Google Ads: (100626, 11)\n",
       "After join with Meta: (100626, 12)\n",
+      "Added state_join to TikTok data\n",
       "Added state_join to result_df based on state column\n",
       "After join with TikTok: (100626, 14)\n",
       "\n",
@@ -2611,7 +2612,7 @@
        "4  2024-04-01   AVALON    CA     LOS ANGELES   AVALON         1   319.558080              85.32         0.00"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2722,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2885,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -3031,13 +3032,15 @@
        "4  2024-04-01   AVALON   AVALON    CA     LOS ANGELES         1   319.558080              85.32         0.00                0.020000                  0.006329                       6.391162                     0.540000    6.931162"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Step 1: Group by date and geo, summing google_cost and keeping the first value of other fields\n",
+    "\n",
+    "\n",
     "grouped_df = final_df.groupby(['Date', 'geo']).agg({\n",
     "    'City': 'first',  # Keep the city\n",
     "    'State': 'first',  # Keep the state\n",
@@ -3077,7 +3080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -3216,7 +3219,7 @@
        "4 2024-04-01   AVALON   AVALON    CA     LOS ANGELES         1   319.558080              85.32         0.00                0.020000                  0.006329                       6.391162                     0.540000    6.931162"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3258,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -3281,7 +3284,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3293,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -3441,7 +3444,7 @@
        "max      639.000000   1011.821893         381.060000   3175.830000                1.000000                  1.000000                     786.825217                   165.120000   3460.116081"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3453,7 +3456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -3511,7 +3514,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3525,7 +3528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -3671,7 +3674,7 @@
        "110 2024-04-01  JASMINE ESTATES  None  None  None         1          0.0                0.0          0.0                     0.0                       0.0                            0.0                          0.0         0.0"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3685,7 +3688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -3699,7 +3702,7 @@
        " 'total_cost']"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3710,7 +3713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -3722,7 +3725,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3742,7 +3745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -3777,7 +3780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -3922,7 +3925,7 @@
        "4 2024-04-01   AVALON   AVALON    CA     LOS ANGELES         1   319.558080              85.32         0.00                0.020000                  0.006329                       6.391162                     0.540000    6.931162       5"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3945,7 +3948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -4024,7 +4027,7 @@
        "4 2024-04-01    5    6.931162         1"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4048,7 +4051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -4057,7 +4060,7 @@
        "array([], dtype=int64)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4078,7 +4081,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(93930, 4)"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client_dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -4151,7 +4174,7 @@
        "4   AVALON    CA       5"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4190,6 +4213,79 @@
     "output_file = os.path.join(OUTPUT_PATH, 'cost_response_geo_mapping.csv')\n",
     "city_state_pairs.to_csv(output_file, index=False)\n",
     "print(f\"Final dataset saved to {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weekly dataset saved to ../data/processed/cost_response_data_wide_weekly.csv\n",
+      "Weekly design input saved to ../data/processed/cost_response_data_design_input_weekly.csv\n",
+      "\n",
+      "Sample of weekly aggregated data:\n",
+      "        date  geo         cost  response\n",
+      "0 2024-04-01    1    48.092110         4\n",
+      "1 2024-04-01    2  1019.147089       149\n",
+      "2 2024-04-01    3     8.775140         2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Add a week start date column (convert to Monday of each week)\n",
+    "final_df['week_start'] = final_df['Date'] - pd.to_timedelta(final_df['Date'].dt.dayofweek, unit='d')\n",
+    "\n",
+    "# Group by week start and geo, aggregating the metrics\n",
+    "weekly_final_df = final_df.groupby(['week_start', 'geo', 'City', 'State', 'DMA'], as_index=False).agg({\n",
+    "    'sessions': 'sum',\n",
+    "    'fb_dma_cost': 'sum',\n",
+    "    'tiktok_state_cost': 'sum',\n",
+    "    'google_cost': 'sum',\n",
+    "    'city_dma_session_ratio': 'mean',\n",
+    "    'city_state_session_ratio': 'mean',\n",
+    "    'facebook_cost_city_normalized': 'sum',\n",
+    "    'tiktok_cost_city_normalized': 'sum',\n",
+    "    'total_cost': 'sum',\n",
+    "    'geo_id': 'first'  # Assuming geo_id is constant per geo\n",
+    "})\n",
+    "\n",
+    "# Rename week_start back to Date to maintain column structure\n",
+    "weekly_final_df.rename(columns={'week_start': 'Date'}, inplace=True)\n",
+    "\n",
+    "# For client_dataset\n",
+    "if not pd.api.types.is_datetime64_any_dtype(client_dataset['date']):\n",
+    "    client_dataset['date'] = pd.to_datetime(client_dataset['date'])\n",
+    "\n",
+    "# Add week start date column \n",
+    "client_dataset['week_start'] = client_dataset['date'] - pd.to_timedelta(client_dataset['date'].dt.dayofweek, unit='d')\n",
+    "\n",
+    "# Group by week start and geo\n",
+    "weekly_client_dataset = client_dataset.groupby(['week_start', 'geo'], as_index=False).agg({\n",
+    "    'cost': 'sum',\n",
+    "    'response': 'sum'\n",
+    "})\n",
+    "\n",
+    "# Rename week_start back to date to maintain column structure\n",
+    "weekly_client_dataset.rename(columns={'week_start': 'date'}, inplace=True)\n",
+    "\n",
+    "# Save weekly datasets\n",
+    "output_file = os.path.join(OUTPUT_PATH, 'cost_response_data_wide_weekly.csv')\n",
+    "weekly_final_df.to_csv(output_file, index=False)\n",
+    "print(f\"Weekly dataset saved to {output_file}\")\n",
+    "\n",
+    "# Save weekly design input file\n",
+    "output_file = os.path.join(OUTPUT_PATH, 'cost_response_data_design_input_weekly.csv')\n",
+    "weekly_client_dataset.to_csv(output_file, index=False)\n",
+    "print(f\"Weekly design input saved to {output_file}\")\n",
+    "\n",
+    "# Print sample of weekly data to confirm\n",
+    "print(\"\\nSample of weekly aggregated data:\")\n",
+    "print(weekly_client_dataset.head(3))"
    ]
   },
   {
