--- a/notebooks/orders_dma_analysis.ipynb
+++ b/notebooks/orders_dma_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4  2/18/2025       32792  Winter Park                      1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,6 +223,66 @@
     "\n",
     "# Check data types again\n",
     "orders_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total orders: 17702\n",
+      "Time frame: 1144 days\n",
+      "From 2022-01-01 to 2025-02-18\n",
+      "Filtered total orders: 3716\n",
+      "Filtered time frame: 323 days\n",
+      "From 2024-04-01 to 2025-02-18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many total orders over what time frame?\n",
+    "# Total number of orders\n",
+    "total_orders = orders_df['households_signed_utc'].sum()\n",
+    "\n",
+    "# Time frame analysis\n",
+    "start_date = orders_df['sign_date'].min()\n",
+    "end_date = orders_df['sign_date'].max()\n",
+    "date_range = (end_date - start_date).days\n",
+    "\n",
+    "# Print the results\n",
+    "print(f\"Total orders: {total_orders}\")\n",
+    "print(f\"Time frame: {date_range} days\")\n",
+    "print(f\"From {start_date.strftime('%Y-%m-%d')} to {end_date.strftime('%Y-%m-%d')}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Define your specific date range\n",
+    "start_date = pd.to_datetime('2024-04-01')\n",
+    "end_date = pd.to_datetime('2025-03-19')\n",
+    "\n",
+    "# Filter the dataframe to only include orders within this date range\n",
+    "filtered_orders_df = orders_df[(orders_df['sign_date'] >= start_date) & \n",
+    "                              (orders_df['sign_date'] <= end_date)]\n",
+    "\n",
+    "# Calculate the total orders within the filtered date range\n",
+    "filtered_total_orders = filtered_orders_df['households_signed_utc'].sum()\n",
+    "\n",
+    "# Get the actual time frame from the filtered data\n",
+    "filtered_start_date = filtered_orders_df['sign_date'].min()\n",
+    "filtered_end_date = filtered_orders_df['sign_date'].max()\n",
+    "filtered_date_range = (filtered_end_date - filtered_start_date).days\n",
+    "\n",
+    "# Print the results\n",
+    "print(f\"Filtered total orders: {filtered_total_orders}\")\n",
+    "print(f\"Filtered time frame: {filtered_date_range} days\")\n",
+    "print(f\"From {filtered_start_date.strftime('%Y-%m-%d')} to {filtered_end_date.strftime('%Y-%m-%d')}\")\n",
+    "\n",
+    "\n",
+    "# Assume that each order is 3000?"
    ]
   },
   {
